# microsandbox

./: Cargo.toml
.github/workflows/: check.yml
crates/agentd/lib/: agent.rs  config.rs  init.rs  lib.rs  loopback.rs  session.rs  tcp.rs
crates/cli/: Cargo.toml
crates/cli/lib/: sandbox_cmd.rs  ui.rs
crates/cli/lib/commands/: common.rs  inspect.rs  install.rs  logs.rs  start.rs
crates/cli/tests/: ssh.rs
crates/filesystem/: Cargo.toml
crates/filesystem/lib/backends/passthroughfs/: builder.rs  create_ops.rs  file_ops.rs  metadata.rs  mod.rs  remove_ops.rs  special.rs  xattr_ops.rs
crates/filesystem/lib/backends/passthroughfs/tests/: mod.rs  test_readonly.rs
crates/filesystem/lib/backends/shared/: platform.rs
crates/image/: Cargo.toml
crates/image/examples/: bench_ingest.rs
crates/image/lib/: tar_ingest.rs
crates/image/lib/ext4/: formatter.rs  mod.rs
crates/microsandbox/: Cargo.toml
crates/microsandbox/lib/: error.rs  lib.rs
crates/microsandbox/lib/agent/: client.rs
crates/microsandbox/lib/logs/: cursor.rs  mod.rs  parser.rs  stream.rs  types.rs
crates/microsandbox/lib/runtime/: handle.rs  spawn.rs
crates/microsandbox/lib/sandbox/: builder.rs  config.rs  fs.rs  handle.rs  mod.rs  ssh.rs  types.rs
crates/microsandbox/tests/: log_stream.rs  log_stream_e2e.rs
crates/microsandbox/tests/dns_matrix/: sandbox.rs
crates/network/: Cargo.toml
crates/network/lib/: auto_publish.rs  backend.rs  builder.rs  config.rs  conn.rs  http_proxy.rs  lib.rs  network.rs  proxy.rs  publisher.rs  shared.rs  stack.rs
crates/network/lib/intercept/: config.rs  handler.rs  mod.rs
crates/network/lib/secrets/: config.rs  handler.rs
crates/network/lib/tls/: certgen.rs  proxy.rs  sni.rs  state.rs
crates/protocol/: VERSIONING.md
crates/protocol/lib/: core.rs  lib.rs  message.rs  network.rs  tcp.rs
crates/protocol/schema/: gen-4.json
crates/protocol/tests/: schema_snapshot.rs
crates/runtime/: Cargo.toml
crates/runtime/lib/: auto_publish.rs  lib.rs  relay.rs  vm.rs
crates/utils/lib/: lib.rs  log_text.rs
docs/cli/: sandbox-commands.mdx  ssh-commands.mdx
docs/sandboxes/: overview.mdx  ssh.mdx  volumes.mdx
docs/sdk/go/: volumes.mdx
docs/sdk/python/: volumes.mdx
docs/sdk/rust/: volumes.mdx
docs/sdk/typescript/: volumes.mdx
examples/typescript/cloud-backend/: package.json
examples/typescript/fs-read-stream/: package.json
examples/typescript/init-handoff/: package.json
examples/typescript/logs-read/: package-lock.json
examples/typescript/net-basic/: package.json
examples/typescript/net-dns/: package.json
examples/typescript/net-policy/: package.json
examples/typescript/net-ports/: package.json
examples/typescript/net-secrets/: package.json
examples/typescript/net-tls/: package.json
examples/typescript/root-bind/: package.json
examples/typescript/root-block/: package.json
examples/typescript/root-oci/: package.json
examples/typescript/rootfs-patch/: package.json
examples/typescript/shell-attach/: package-lock.json
examples/typescript/snapshot-fork/: package.json
examples/typescript/volume-disk/: package.json
examples/typescript/volume-named/: package.json
scripts/ci/: clean-runner-disk.sh
sdk/go/: logs.go  logs_test.go  options.go  options_test.go  sandbox.go  sandbox_options_test.go  setup.go
sdk/go/integration/: volume_test.go
sdk/go/internal/ffi/: ffi.go
sdk/go/native/: microsandbox_go_ffi.h
sdk/go/native/src/: lib.rs
sdk/node-ts/: package-lock.json  package.json
sdk/node-ts/native/: error.rs  index.cjs  index.d.ts  mount_builder.rs  sandbox.rs  sandbox_handle.rs  types.rs
sdk/node-ts/npm/darwin-arm64/: package.json
sdk/node-ts/npm/linux-arm64-gnu/: package.json
sdk/node-ts/npm/linux-x64-gnu/: package.json
sdk/node-ts/src/: index.ts  logs.ts  sandbox-handle.ts  sandbox.ts
sdk/node-ts/src/internal/: napi.ts
sdk/node-ts/tests/unit/: builders.test.ts
sdk/python/microsandbox/: __init__.py  _microsandbox.pyi  types.py
sdk/python/src/: helpers.rs  lib.rs  logs.rs  sandbox.rs  sandbox_handle.rs  volume.rs
sdk/python/tests/: test_mount_policies.py
sdk/rust/lib/: lib.rs
sdk/rust/lib/runtime/: handle.rs  spawn.rs
sdk/rust/lib/sandbox/: builder.rs  mod.rs
sdk/rust/tests/: domain_policy.rs  http_connect_secret.rs
