[workspace]
resolver = "3"
exclude = ["crates/agentd"]
members = [
    "crates/cli",
    "crates/db",
    "crates/filesystem",
    "crates/image",
    "crates/microsandbox",
    "crates/migration",
    "crates/protocol",
    "crates/runtime",
    "crates/test-init",
    "crates/test-macros",
    "crates/test-utils",
    "crates/utils",
    "examples/rust/fs-read-stream",
    "examples/rust/init-handoff",
    "examples/rust/logs-read",
    "examples/rust/metrics-stream",
    "examples/rust/net-basic",
    "examples/rust/net-dns",
    "examples/rust/net-policy",
    "examples/rust/net-ports",
    "examples/rust/net-secrets",
    "examples/rust/net-secrets-body",
    "examples/rust/net-tls",
    "examples/rust/root-bind",
    "examples/rust/root-block",
    "examples/rust/root-oci",
    "examples/rust/rootfs-patch",
    "examples/rust/shell-attach",
    "examples/rust/snapshot-fork",
    "examples/rust/volume-disk",
    "examples/rust/volume-named",
    "sdk/node-ts",
    "sdk/python",
    "sdk/go/native",
]

[workspace.package]
authors = ["Super Rad Company <development@superrad.company>"]
repository = "https://github.com/superradcompany/microsandbox"
version = "0.4.6"
license = "Apache-2.0"
edition = "2024"

[profile.release]
codegen-units = 1
lto = true
strip = true
panic = "abort"

# wirenboard's libkrun fork of msb_krun_* 0.1.13 — see the outer
# workspace Cargo.toml for the full rationale. Must mirror that file's
# [patch.crates-io] block exactly (same rev, same crates) so the two
# workspaces compile against identical msb_krun cohorts; mismatched
# patches produce crate-identity errors across the agent-vm <->
# microsandbox boundary.
[patch.crates-io]
msb_krun = { git = "https://github.com/wirenboard/libkrun", rev = "38e46f2" }
msb_krun_arch = { git = "https://github.com/wirenboard/libkrun", rev = "38e46f2" }
msb_krun_arch_gen = { git = "https://github.com/wirenboard/libkrun", rev = "38e46f2" }
msb_krun_cpuid = { git = "https://github.com/wirenboard/libkrun", rev = "38e46f2" }
msb_krun_devices = { git = "https://github.com/wirenboard/libkrun", rev = "38e46f2" }
msb_krun_hvf = { git = "https://github.com/wirenboard/libkrun", rev = "38e46f2" }
msb_krun_kernel = { git = "https://github.com/wirenboard/libkrun", rev = "38e46f2" }
msb_krun_polly = { git = "https://github.com/wirenboard/libkrun", rev = "38e46f2" }
msb_krun_smbios = { git = "https://github.com/wirenboard/libkrun", rev = "38e46f2" }
msb_krun_utils = { git = "https://github.com/wirenboard/libkrun", rev = "38e46f2" }
msb_krun_vmm = { git = "https://github.com/wirenboard/libkrun", rev = "38e46f2" }

[workspace.dependencies]
anyhow = "1.0"
astral-tokio-tar = "0.6"
base64 = "0.22"
async-compression = "0.4"
bytes = "1.9"
chrono = { version = "0.4", features = ["serde"] }
ciborium = "0.2"
clap = { version = "4.5", features = ["color", "derive"] }
console = "0.16"
crossbeam-queue = "0.3"
crossterm = { version = "0.29.0", features = ["events"] }
dirs = "6.0"
etherparse = "0.19"
flate2 = "1.0"
futures = "0.3"
hex = "0.4"
hickory-client = "0.26.0-alpha.1"
hickory-proto = "0.26.0-alpha.1"
hickory-resolver = "0.26.0-alpha.1"
indicatif = "0.18"
ipnetwork = { version = "0.21.0", features = ["serde"] }
libc = "0.2"
nix = "0.30"
oci-client = "0.16"
oci-spec = "0.9.0"
rand = "0.10.1"
reflink-copy = "0.1"
reqwest = { version = "0.13", features = ["json", "stream"] }
resolv-conf = "0.7"
scopeguard = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0"
sha2 = "0.11.0"
smoltcp = { version = "0.13", default-features = false }
socket2 = "0.5"
tar = "0.4"
time = "0.3"
tempfile = "3.15"
thiserror = "2.0"
# jemalloc for the `msb` binary — replaces glibc malloc, whose per-arena
# heaps balloon host RSS on many-core hosts (see crates/cli). `background_threads`
# makes jemalloc purge freed pages back to the OS while the process is idle.
tikv-jemallocator = { version = "0.6", features = ["background_threads"] }
tokio = { version = "1.42", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
typed-builder = "0.23"
which = "8"
xattr = "1.3"
sea-orm = { version = "1.1", default-features = false, features = [
    "macros",
    "runtime-tokio-rustls",
    "sqlx-sqlite",
    "with-chrono",
] }
sea-orm-migration = { version = "1.1", default-features = false, features = [
    "runtime-tokio-rustls",
    "sqlx-sqlite",
] }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "sqlite",
] }
ureq = { version = "3", features = ["platform-verifier"] }
rustls = { version = "0.23", default-features = false, features = [
    "logging",
    "ring",
    "std",
    "tls12",
] }
tokio-rustls = "0.26"
rustls-pemfile = "2"
rustls-native-certs = "0.8"
rcgen = { version = "0.13", features = ["x509-parser"] }
lru = "0.16.3"
parking_lot = "0.12"
rpassword = "7"
