[workspace]
resolver = "3"
members = [
    "crates/agentd",
    "crates/cli",
    "crates/db",
    "crates/filesystem",
    "crates/image",
    "crates/metrics",
    "crates/metrics-collector",
    "packages/agent-client/rust",
    "packages/microsandbox-types/rust",
    "sdk/rust",
    "crates/migration",
    "crates/protocol",
    "crates/runtime",
    "crates/test-init",
    "crates/test-macros",
    "crates/test-utils",
    "crates/utils",
    "examples/rust/cloud-backend",
    "examples/rust/fs-read-stream",
    "examples/rust/init-handoff",
    "examples/rust/logs-read",
    "examples/rust/metrics-stream",
    "examples/rust/net-basic",
    "examples/rust/net-dns",
    "examples/rust/net-policy",
    "examples/rust/net-ports",
    "examples/rust/net-secrets",
    "examples/rust/net-secrets-body",
    "examples/rust/net-tls",
    "examples/rust/root-bind",
    "examples/rust/root-block",
    "examples/rust/root-oci",
    "examples/rust/rootfs-patch",
    "examples/rust/shell-attach",
    "examples/rust/snapshot-fork",
    "examples/rust/volume-disk",
    "examples/rust/volume-named",
    "sdk/node-ts",
    "sdk/python",
    "sdk/go/native",
]

[workspace.package]
authors = ["Super Rad Company <development@superrad.company>"]
repository = "https://github.com/superradcompany/microsandbox"
version = "0.5.7"
license = "Apache-2.0"
edition = "2024"

[profile.release]
codegen-units = 1
lto = true
strip = true
panic = "abort"

[workspace.dependencies]
# Internal crates. Versioned here so a release bumps one place, not every
# manifest; members reference them via `{ workspace = true }`.
# `default-features = false` on crates whose consumers opt into features
# explicitly (see each member manifest); other consumers re-enable defaults.
microsandbox = { version = "0.5.7", path = "sdk/rust", default-features = false }
microsandbox-agent-client = { version = "0.5.7", path = "packages/agent-client/rust" }
microsandbox-db = { version = "0.5.7", path = "crates/db" }
microsandbox-filesystem = { version = "0.5.7", path = "crates/filesystem", default-features = false }
microsandbox-image = { version = "0.5.7", path = "crates/image" }
microsandbox-metrics = { version = "0.5.7", path = "crates/metrics" }
microsandbox-types = { version = "0.5.7", path = "packages/microsandbox-types/rust" }
microsandbox-migration = { version = "0.5.7", path = "crates/migration" }
microsandbox-network = { version = "0.5.7", path = "crates/network" }
microsandbox-protocol = { version = "0.5.7", path = "crates/protocol" }
microsandbox-runtime = { version = "0.5.7", path = "crates/runtime", default-features = false }
microsandbox-utils = { version = "0.5.7", path = "crates/utils" }
msb_krun = { version = "0.1.17" }
test-macros = { path = "crates/test-macros" }
test-utils = { path = "crates/test-utils" }

# External crates.
anyhow = "1.0"
astral-tokio-tar = "0.6"
base64 = "0.22"
async-compression = "0.4"
bytes = "1.9"
chrono = { version = "0.4", features = ["serde"] }
ciborium = "0.2"
clap = { version = "4.6", features = ["color", "derive"] }
console = "0.16"
crossbeam-queue = "0.3"
crossterm = { version = "0.29.0", features = ["events"] }
dirs = "6.0"
etherparse = "0.19"
flate2 = "1.0"
futures = "0.3"
futures-util = "0.3"
hex = "0.4"
hickory-client = "0.26.0-alpha.1"
hickory-proto = "0.26.0-alpha.1"
hickory-resolver = "0.26.0-alpha.1"
httlib-hpack = "0.1.3"
indicatif = "0.18"
ipnetwork = { version = "0.21.0", features = ["serde"] }
libc = "0.2"
nix = "0.31"
notify = "8"
oci-client = "0.17"
oci-spec = "0.10.0"
rand = "0.10.1"
reflink-copy = "0.1"
reqwest = { version = "0.13", features = ["json", "stream"] }
resolv-conf = "0.7"
scopeguard = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0"
sha2 = "0.11.0"
smoltcp = { version = "0.13", default-features = false }
socket2 = "0.6"
strum = { version = "0.28", features = ["derive"] }
tar = "0.4"
time = "0.3"
tempfile = "3.15"
thiserror = "2.0"
# jemalloc for the `msb` binary — replaces glibc malloc, whose per-arena
# heaps balloon host RSS on many-core hosts (see crates/cli). `background_threads`
# makes jemalloc purge freed pages back to the OS while the process is idle.
tikv-jemallocator = { version = "0.6", features = ["background_threads"] }
tokio = { version = "1.52", features = ["full"] }
tokio-tungstenite = "0.29.0"
tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ts-rs = "12.0.1"
typed-builder = "0.23"
which = "8"
xattr = "1.3"
sea-orm = { version = "1.1", default-features = false, features = [
    "macros",
    "runtime-tokio-rustls",
    "sqlx-sqlite",
    "with-chrono",
] }
sea-orm-migration = { version = "1.1", default-features = false, features = [
    "runtime-tokio-rustls",
    "sqlx-sqlite",
] }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "sqlite",
] }
ureq = { version = "3", features = ["platform-verifier"] }
rustls = { version = "0.23", default-features = false, features = [
    "logging",
    "ring",
    "std",
    "tls12",
] }
tokio-rustls = "0.26"
rustls-pemfile = "2"
rustls-native-certs = "0.8"
rcgen = { version = "0.14", features = ["x509-parser"] }
lru = "0.18.0"
parking_lot = "0.12"
rpassword = "7"
russh = "0.61.1"
russh-sftp = "2.3.0"
