[package]
name = "microsandbox-cli"
description = "CLI binary for managing microsandbox environments."
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[[bin]]
name = "msb"
path = "bin/main.rs"

[lib]
name = "microsandbox_cli"
path = "lib/lib.rs"

[features]
default = ["net", "prebuilt", "keyring"]
keyring = ["microsandbox/keyring"]
prebuilt = ["microsandbox-runtime/prebuilt", "microsandbox/prebuilt"]
net = [
    "dep:microsandbox-network",
    "microsandbox-runtime/net",
    "microsandbox/net",
    "dep:ipnetwork",
    "dep:thiserror",
]

[dependencies]
anyhow.workspace = true
base64.workspace = true
bytes.workspace = true
chrono.workspace = true
clap.workspace = true
console.workspace = true
dirs.workspace = true
futures.workspace = true
indicatif.workspace = true
ipnetwork = { workspace = true, optional = true }
libc.workspace = true
microsandbox = { version = "0.4.6", path = "../microsandbox", default-features = false }
microsandbox-image = { version = "0.4.6", path = "../image" }
microsandbox-network = { version = "0.4.6", path = "../network", optional = true }
microsandbox-protocol = { version = "0.4.6", path = "../protocol" }
microsandbox-runtime = { version = "0.4.6", path = "../runtime", default-features = false }
microsandbox-utils = { version = "0.4.6", path = "../utils" }
rand.workspace = true
regex = "1"
reqwest.workspace = true
rpassword.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror = { workspace = true, optional = true }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
