[package]
name = "microsandbox-cli"
description = "CLI binary for managing microsandbox environments."
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[[bin]]
name = "msb"
path = "bin/main.rs"

[lib]
name = "microsandbox_cli"
path = "lib/lib.rs"

[features]
default = ["net", "prebuilt", "keyring"]
keyring = ["microsandbox/keyring"]
prebuilt = ["microsandbox-runtime/prebuilt", "microsandbox/prebuilt"]
net = [
    "dep:microsandbox-network",
    "microsandbox-runtime/net",
    "microsandbox/net",
    "dep:ipnetwork",
    "dep:thiserror",
]

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
console.workspace = true
dirs.workspace = true
indicatif.workspace = true
ipnetwork = { workspace = true, optional = true }
libc.workspace = true
microsandbox = { version = "0.4.6", path = "../microsandbox", default-features = false }
microsandbox-image = { version = "0.4.6", path = "../image" }
microsandbox-network = { version = "0.4.6", path = "../network", optional = true }
microsandbox-protocol = { version = "0.4.6", path = "../protocol" }
microsandbox-runtime = { version = "0.4.6", path = "../runtime", default-features = false }
microsandbox-utils = { version = "0.4.6", path = "../utils" }
rand.workspace = true
regex = "1"
reqwest.workspace = true
rpassword.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror = { workspace = true, optional = true }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Use jemalloc instead of the system (glibc) allocator on Unix. The `msb`
# sandbox supervisor is a tokio multi-threaded VMM + network proxy; on
# many-core hosts glibc keeps up to `8 * ncpu` malloc arenas, each able to
# grow a 64 MiB heap that it never returns to the OS once touched. Under
# bursty concurrent allocation (the Rust network stack) that balloons host
# RSS to 10-20+ GiB even for a sandbox capped at `--memory 4`. jemalloc's
# background purge returns freed pages to the OS, so RSS tracks the live set.
[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
tikv-jemallocator = { workspace = true }
