[package]
name = "microsandbox-filesystem"
description = "Filesystem backends and guest filesystem support for microsandbox."
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[lib]
path = "lib/lib.rs"

[dependencies]
libc.workspace = true
microsandbox-utils = { version = "0.4.6", path = "../utils" }
msb_krun = "0.1.13"
scopeguard.workspace = true
tempfile.workspace = true
tracing.workspace = true

[features]
default = ["prebuilt"]
prebuilt = ["microsandbox-utils/http-client"]

[build-dependencies]
microsandbox-utils = { version = "0.4.6", path = "../utils" }
