[package]
name = "microsandbox-network"
description = "Networking types and smoltcp engine for the microsandbox project."
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[lib]
path = "lib/lib.rs"

[dependencies]
base64 = "0.22"
bytes = { workspace = true }
crossbeam-queue = { workspace = true }
dirs = { workspace = true }
futures = { workspace = true }
hickory-client = { workspace = true }
# tls-ring unlocks `hickory_proto::rustls::tls_client_connect` for the
# upstream DoT client. The workspace already uses rustls with the ring
# crypto provider, so no new dependency is introduced.
hickory-proto = { workspace = true, features = ["tls-ring"] }
ipnetwork = { workspace = true }
libc = { workspace = true }
lru = { workspace = true }
microsandbox-protocol = { version = "0.4.6", path = "../protocol" }
microsandbox-utils = { version = "0.4.6", path = "../utils" }
msb_krun = { version = "0.1.13", features = ["net"] }
parking_lot = { workspace = true }
pem = "3"
percent-encoding = "2"
rcgen = { workspace = true }
resolv-conf = { workspace = true }
rustls = { workspace = true }
rustls-native-certs = { workspace = true }
rustls-pemfile = "2"
serde = { workspace = true }
# Used for the `SO_LINGER(0)` (RST-on-drop) trick on rejected inbound
# connections in `publisher.rs`. tokio's `TcpStream::set_linger` is
# deprecated; `socket2::SockRef::from(&stream)` is the supported path.
socket2 = { workspace = true }
smoltcp = { workspace = true, features = [
    "alloc",
    "async",
    "medium-ethernet",
    "proto-ipv4",
    "proto-ipv6",
    "socket-dns",
    "socket-icmp",
    "socket-tcp",
    "socket-udp",
] }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
tracing = { workspace = true }

# macOS reads DNS servers from SystemConfiguration / SCDynamicStore rather
# than /etc/resolv.conf. On VPN + split-DNS setups, the file version is
# stale or incomplete. These deps let us query the live system state.
[target.'cfg(target_os = "macos")'.dependencies]
# Pinned to 0.9 to match system-configuration 0.7. Bumping to 0.10 would
# create two incompatible CFString/CFArray/... types in the build.
core-foundation = "0.9"
system-configuration = "0.7"

[dev-dependencies]
serde_json = { workspace = true }
tempfile = { workspace = true }
